# eta-keyboard

./: CMakeLists.txt  etaKeyboard.cpp  etaKeyboard.h  etaKeyboard.kdev4  main.cpp  reader.cpp  reader.h
.kdev4/: etaKeyboard.kdev4
